--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "gatsby-starter-advanced",
+  "name": "co.uk",
   "description": "GatsbyJS starter that includes examples for advanced use cases.",
-  "version": "1.1.0",
-  "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
+  "version": "1.0.0",
+  "author": "Mark Walker <theshow@gmail.com>",
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "gatsby": "^2.22.15",
     "gatsby-image": "^2.4.5",
     "gatsby-plugin-catch-links": "^2.3.3",
@@ -15,6 +16,7 @@
     "gatsby-plugin-nprogress": "^2.3.2",
     "gatsby-plugin-offline": "^3.2.7",
     "gatsby-plugin-react-helmet": "^3.3.2",
+    "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-sharp": "^2.6.9",
     "gatsby-plugin-sitemap": "^2.4.3",
     "gatsby-plugin-twitter": "^2.3.2",
@@ -32,7 +34,7 @@
     "netlify-cms-app": "^2.12.13",
     "prismjs": "^1.21.0",
     "react": "^16.13.1",
-    "react-disqus-comments": "^1.4.0",
+    "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
     "react-share": "^4.1.0",
@@ -48,6 +50,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.20.0",
     "gh-pages": "^3.0.0",
+    "node-sass": "^4.10.0",
     "prettier": "^2.0.5",
     "remark-cli": "^8.0.0",
     "remark-preset-lint-recommended": "^4.0.0",
@@ -61,6 +64,13 @@
   ],
   "license": "MIT",
   "main": "n/a",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/marksweb/co.uk"
+  },
+  "bugs": {
+    "url": "https://github.com/marksweb/co.uk/issues"
+  },
   "scripts": {
     "develop": "gatsby develop",
     "dev": "npm run develop",
