--- a/package.json
+++ b/package.json
@@ -1,69 +1,63 @@
 {
   "name": "co.uk",
-  "description": "GatsbyJS starter that includes examples for advanced use cases.",
   "version": "1.0.0",
   "author": "Mark Walker <theshow@gmail.com>",
-  "dependencies": {
-    "bootstrap": "^4.3.1",
-    "gatsby": "^2.28.1",
-    "gatsby-image": "^2.7.0",
-    "gatsby-plugin-catch-links": "^2.6.0",
-    "gatsby-plugin-feed": "^2.9.0",
-    "gatsby-plugin-google-analytics": "^2.7.0",
-    "gatsby-plugin-lodash": "^3.6.0",
-    "gatsby-plugin-manifest": "^2.8.0",
-    "gatsby-plugin-netlify-cms": "^4.6.0",
-    "gatsby-plugin-nprogress": "^2.6.0",
-    "gatsby-plugin-offline": "^3.6.0",
-    "gatsby-plugin-react-helmet": "^3.6.0",
-    "gatsby-plugin-sass": "^2.7.0",
-    "gatsby-plugin-sharp": "^2.10.1",
-    "gatsby-plugin-sitemap": "^2.8.0",
-    "gatsby-plugin-twitter": "^2.6.0",
-    "gatsby-remark-autolink-headers": "^2.7.0",
-    "gatsby-remark-copy-linked-files": "^2.6.0",
-    "gatsby-remark-images": "^3.7.0",
-    "gatsby-remark-prismjs": "^3.9.0",
-    "gatsby-remark-relative-images": "^0.3.0",
-    "gatsby-remark-responsive-iframe": "^2.7.0",
-    "gatsby-source-filesystem": "^2.7.0",
-    "gatsby-transformer-remark": "^2.12.0",
-    "gatsby-transformer-sharp": "^2.8.0",
-    "lodash": "^4.17.20",
-    "moment": "^2.26.0",
-    "netlify-cms-app": "^2.14.4",
-    "prismjs": "^1.21.0",
-    "react": "^16.13.1",
-    "react-bootstrap": "^1.0.0-beta.8",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^6.0.0",
-    "react-share": "^4.1.0",
-    "react-twitter-widgets": "^1.9.5",
-    "url-join": "^4.0.0"
-  },
-  "devDependencies": {
-    "cli-glob": "^0.1.0",
-    "eslint": "^7.15.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.20.0",
-    "gh-pages": "^3.0.0",
-    "node-sass": "^4.10.0",
-    "prettier": "^2.2.1",
-    "remark-cli": "^8.0.0",
-    "remark-preset-lint-recommended": "^4.0.0",
-    "stylelint": "^13.8.0",
-    "stylelint-config-prettier": "^8.0.1",
-    "stylelint-config-standard": "^20.0.0",
-    "write-good": "^1.0.4"
-  },
+  "description": "Code for my personal Blog",
+  "main": "index.js",
   "keywords": [
+    "developement",
+    "django",
+    "python",
     "gatsby"
   ],
   "license": "MIT",
-  "main": "n/a",
+  "private": false,
+  "dependencies": {
+    "babel-plugin-styled-components": "1.12.0",
+    "gatsby": "2.27.5",
+    "gatsby-image": "2.6.0",
+    "gatsby-link": "2.6.1",
+    "gatsby-plugin-csp": "1.1.3",
+    "gatsby-plugin-feed": "2.8.0",
+    "gatsby-plugin-google-analytics": "2.6.0",
+    "gatsby-plugin-manifest": "2.7.0",
+    "gatsby-plugin-netlify": "2.6.0",
+    "gatsby-plugin-offline": "3.5.0",
+    "gatsby-plugin-react-helmet": "3.5.0",
+    "gatsby-plugin-robots-txt": "1.5.3",
+    "gatsby-plugin-sharp": "2.9.1",
+    "gatsby-plugin-sitemap": "2.7.0",
+    "gatsby-plugin-styled-components": "3.5.0",
+    "gatsby-plugin-typography": "2.7.0",
+    "gatsby-remark-external-links": "^0.0.4",
+    "gatsby-remark-images": "3.6.0",
+    "gatsby-remark-smartypants": "2.5.0",
+    "gatsby-remark-vscode": "3.2.0",
+    "gatsby-source-filesystem": "2.6.1",
+    "gatsby-transformer-remark": "2.11.1",
+    "gatsby-transformer-sharp": "2.7.0",
+    "htmlparser2": "5.0.1",
+    "prop-types": "15.7.2",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-helmet": "6.1.0",
+    "react-icons": "4.1.0",
+    "react-typography": "0.16.19",
+    "remark-external-links": "8.0.0",
+    "replace-in-file": "6.1.0",
+    "slugify": "1.4.6",
+    "styled-components": "5.2.1",
+    "toml": "github:GalAster/vscode-toml",
+    "typography": "0.16.19",
+    "typography-theme-funston": "0.16.19"
+  },
+  "devDependencies": {
+    "eslint": "7.14.0",
+    "eslint-config-prettier": "6.15.0",
+    "eslint-plugin-prettier": "3.1.4",
+    "eslint-plugin-react": "7.21.5",
+    "prettier": "2.2.1"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/marksweb/co.uk"
@@ -84,10 +78,5 @@
     "write-good": "write-good $(glob 'content/posts/**/*.md')",
     "format:js": "prettier '**/*.{js,jsx}' --write",
     "format:styles": "prettier '**/*.{css,scss}' --write"
-  },
-  "remarkConfig": {
-    "plugins": [
-      "remark-preset-lint-recommended"
-    ]
   }
 }
