--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "replace-in-file": "6.2.0",
     "slugify": "1.5.3",
     "styled-components": "5.3.0",
+    "toml": "3.0.0",
     "typography": "0.16.21",
     "typography-theme-funston": "0.16.19"
   },
