--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby": "3.8.1",
     "gatsby-image": "3.8.0",
     "gatsby-link": "3.8.0",
+    "gatsby-plugin-canonical-urls": "^3.8.0",
     "gatsby-plugin-csp": "1.1.3",
     "gatsby-plugin-feed": "3.8.0",
     "gatsby-plugin-google-analytics": "3.8.0",
@@ -56,6 +57,7 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react": "7.24.0",
+    "jshint": "^2.13.0",
     "prettier": "2.3.2"
   },
   "repository": {
