--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "private": false,
   "dependencies": {
     "@sentry/gatsby": "^6.11.0",
+    "@sentry/tracing": "^6.19.4",
     "babel-plugin-styled-components": "2.0.6",
     "gatsby": "4.11.2",
     "gatsby-image": "3.11.0",
@@ -40,8 +41,8 @@
     "gatsby-transformer-sharp": "4.11.0",
     "htmlparser2": "7.2.0",
     "prop-types": "15.8.1",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-helmet": "6.1.0",
     "react-icons": "4.3.1",
     "react-typography": "0.16.20",
