--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "gatsby-plugin-canonical-urls": "^4.0.0",
     "gatsby-plugin-csp": "1.1.3",
     "gatsby-plugin-feed": "4.19.0",
-    "gatsby-plugin-google-analytics": "4.19.0",
+    "gatsby-plugin-google-gtag": "^4.19.0",
     "gatsby-plugin-manifest": "4.19.0",
     "gatsby-plugin-netlify": "5.0.1",
     "gatsby-plugin-offline": "5.19.0",
