--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "gatsby"
   ],
   "license": "MIT",
-  "private": false,
   "dependencies": {
     "@sentry/gatsby": "^7.0.0",
     "@sentry/tracing": "^7.0.0",
@@ -83,5 +82,6 @@
     "write-good": "write-good $(glob 'content/posts/**/*.md')",
     "format:js": "prettier '**/*.{js,jsx}' --write",
     "format:styles": "prettier '**/*.{css,scss}' --write"
-  }
+  },
+  "packageManager": "yarn@3.4.1"
 }
