--- a/.github/workflows/audit-live.yml
+++ b/.github/workflows/audit-live.yml
@@ -8,7 +8,7 @@ jobs:
     - name: Audit live URL
       uses: jakejarvis/lighthouse-action@master
       with:
-        url: 'https://markw.co.uk/'
+        netlify_site: 'affectionate-agnesi-a744d0.netlify.app'
     - name: Upload results as an artifact
       uses: actions/upload-artifact@master
       with:
