Switch to proper CSP plugin

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "gatsby-image": "3.11.0",
     "gatsby-link": "5.13.1",
     "gatsby-plugin-canonical-urls": "^5.0.0",
-    "gatsby-plugin-csp": "1.1.4",
+    "gatsby-plugin-csp": "^1.1.4",
     "gatsby-plugin-feed": "5.13.1",
     "gatsby-plugin-google-gtag": "^5.12.3",
     "gatsby-plugin-manifest": "5.13.1",
@@ -74,7 +74,7 @@
     "develop": "gatsby develop",
     "dev": "npm run develop",
     "serve": "gatsby serve",
-    "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build && node ./csp-util.mjs",
+    "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build",
     "build:pp": "gatsby build --prefix-paths",
     "build:gh": "npm run clean && npm run build:pp && gh-pages -d public",
     "clean": "rm -rf public && rm -rf .cache",
